2007-05-10  Thorsten Kahler  <thorsten.kahler@dkd.de>

	* fixed bug #209: require field URL in page-type "External URL"

2007-05-09  Andreas Otto  <andreas.otto@dkd.de>

	* Fixed bug #2052: Color picker does not work properly in flex forms. Thanks to David Bruehlmeier for providing a patch and a testcase.

2007-04-28  Andreas Otto  <andreas.otto@dkd.de>

	* Fixed bug #3649: Call to a member function formWidth() on object $GLOBALS['TBE_TEMPLATE'] instead on $GLOBALS['SOBE'].

2007-04-03  Michael Stucki  <michael@typo3.org>

	* Release of TYPO3 4.0.6

2007-03-28  Patrick Broens  <patrick@patrickbroens.nl>

	* Fixed bug #5266: WamCom browser check in htmlarea.js conflicted with Firefox 2.0.0.3

2007-03-01  Karsten Dambekalns <karsten@typo3.org>

	* typo3/sysext/indexed_search: DBAL compliancy patch

2007-02-27  Oliver Hader  <oh@inpublica.de>

	* Fixed bug: #5052: Form action URL is not htmlspecialchared (patch by Michael Stucki)

2007-02-27  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed bug #3666: permissions of versioned pages are not changed in draft workspace (patch by Andreas Wolf)

2007-02-21  Ingmar Schlecht  <ingmar@typo3.org>

	* Release of TYPO3 4.0.5

2007-02-21  Michael Stucki  <michael@typo3.org>

	* Security fix: Email injection vulnerability in t3lib_formmail (reported and fixed by Andreas Otto and Thorsten Kahler)

2007-02-20  Michael Stucki  <michael@typo3.org>

	* Fixed bug in EM: Insecure extensions were still displayed (patch by Karsten Dambekalns)
	* Fixed a typo in typo3/sysext/install/mod/class.tx_install.php
	* Fixed bug #4207: User>Workspaces shows users pages where they have no access to (patch by Martin Kutschker)

2007-02-15  Michael Stucki  <michael@typo3.org>

	* Reverted fix for bug #4689 (closes #4987): Fix seems to cause problems, reinvestiation is needed

2007-02-15  Thorsten Kahler  <thorsten.kahler@dkd.de>

	* Fix: Display description of options in install tool correctly

2007-02-14  Rupert Germann  <rupi@gmx.li>
