@@ -1,3 +1,7 @@
+2007-07-02  Oliver Hader  <oh@inpublica.de>
+
+	* Fixed bug #4623: Content encoding with x-gzip not possible in IE7
+
 2007-05-10  Thorsten Kahler  <thorsten.kahler@dkd.de>
 
 	* fixed bug #209: require field URL in page-type "External URL"
